# articlewriterv6

./: .env.example  Dockerfile  README.md  app_streamlit.py  pyproject.toml  requirements.txt
config/: default.yaml
docs/: IMPROVEMENTS.md  MODULES.md
scripts/: run_pipeline.py
src/articlewriter/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  models.py  orchestrator.py  utils.py
src/articlewriter/formatting/: __init__.py  apa_docx.py
src/articlewriter/generation/: __init__.py  writer.py
src/articlewriter/outputs/: __init__.py  writer.py
src/articlewriter/plagiarism/: __init__.py  checker.py
src/articlewriter/retrieval/: __init__.py  retriever.py  storage.py
src/articlewriter/synthesis/: __init__.py  engine.py
src/articlewriter/trend_detection/: __init__.py  detector.py
